# ToDoList_ipp

./: .gitignore  AntiPEP8.py  README.md  example.py  logger.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: CI.yml  autodocstrings.yml  autopep8.yml  ci.yaml  pipeline.yaml  reqandtests.yml  requirement.yml
docs/: conf.py  modules.rst
docs/_build/html/: .buildinfo  example.html  genindex.html  index.html  logger.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html  test.html  todoproject.html
docs/_build/html/.doctrees/: environment.pickle  example.doctree  index.doctree  logger.doctree  modules.doctree  setup.doctree  test.doctree  todoproject.doctree
docs/_build/html/_modules/: example.html  index.html
docs/_build/html/_modules/test/: run_tests.html  test_task.html
docs/_build/html/_modules/todoproject/: task.html
docs/_build/html/_sources/: index.rst.txt  test.rst.txt  todoproject.rst.txt
src/: example.py
src/project_to_do/: task.py
src/project_to_do/utils/: logger.py
src/tests/: .coverage  run_tests.py  test_task.py
streamlit/: app.py
test/: .coverage  __init__.py  run_tests.py  test_task.py
todoproject/: __init__.py  example.py  task.py
