[tool.poetry]
name = "todoproject"
version = "0.1.0"
description = "A task management Python library."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^6.1.0"
autopep8 = "^2.0.4"
setuptools = "^68.2.2"
pytest = "^7.4.3"
coverage = "^7.3.2"
pydocstyle = "^6.3.0"
sphinx = "^7.2.6"
safety = "^2.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
